auth bugs fixes
