# src/controllers/AuthController.ts
@@ -1,4 +1,4 @@
-import { NextFunction, Request, Response } from 'express';
+import e, { NextFunction, Request, Response } from 'express';
 import { User } from '../entity/User';
 import { BaseEntity, getRepository, getConnection } from 'typeorm';
 import { validate } from 'class-validator';
@@ -44,8 +44,9 @@ const generateString = () => {
 const emailRegexp = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/;
 
 class AuthController extends BaseEntity {
-    static login = async (req: any, res: any) => {
+    static login = async (req: Request, res: Response) => {
         const {email, password} = req.body;
+        
         if(!(email&&password)) {
             return res.status(400).send('Reuires email and passwerd, both!')
         }
@@ -54,9 +55,8 @@ class AuthController extends BaseEntity {
             return res.status(400).send('Bad request: email is not valid')
         }
 
-        const userRepository = getRepository(User);
         try {
-            let user = await userRepository.findOne({email: email});
+            let user = await getRepository(User).findOne({email: email});
             if(!user) {
                 return res.status(404).send('User not found')
             }
@@ -69,30 +69,39 @@ class AuthController extends BaseEntity {
             }
             const token = jwt.sign(payload, 'secret', {expiresIn: '30m'})
             res.cookie('session-token', token)
-            res.status(200).json({token: token, userData: user});
+            return res.status(200).json({token: token, userData: user});
         } catch (error) {
-            res.status(400).send('Bad Request')
+            return res.status(400).send('Bad Request')
         }
     }
 
     static logout = async (req: Request, res: Response) => {
-        res.clearCookie('session-token')
-        res.send('logout').redirect('/login')
+        let token = req.cookies['session-token'];
+        if (token) {
+            res.clearCookie('session-token');
+            return res.status(200).send('logout');
+        } else {
+            return res.status(200).send('You are not authorized');
+        }
     }
 
-    static register = async (req: any, res: any) => {
+    static register = async (req: Request, res: Response) => {
         const {firstName, lastName, userName, email, password} = req.body;
-        let user = new User();
 
+        if(password =='' || email == '' || email == null || password == null) {
+            return res.status(400).send('Please insert all values')
+        }
+
+        if(!emailRegexp.test(email)) {
+            return res.status(400).send('Bad request: email is not valid')
+        }
+
+        let user = new User();
         user.firstName = firstName;
         user.lastName = lastName;
         user.userName = userName;
         user.email = email;
         user.password = user.setPassword(password);
-
-        if(!emailRegexp.test(email)) {
-            return res.status(400).send('Bad request: email is not valid')
-        }
 
         const errors = await validate(user);
         if(errors.length > 0) {
@@ -101,29 +110,26 @@ class AuthController extends BaseEntity {
         }
 
         const userRepository = getRepository(User);
-        let emailExists = await userRepository.findOne({email: email});
-        let userNameExists = await userRepository.findOne({userName: userName});
 
-        if(userNameExists) {
-            res.status(400).send('Account with this username already exists, try another');
-            return;
-        }
-        
+        let userNameExists = await userRepository.findOne({userName: userName});
+        let emailExists = await userRepository.findOne({email: email});
         if(emailExists) {
-            res.status(400).send('Email is already taken');
-            return;
+            return res.status(400).send('Email is already taken');
+        }
+        if(userNameExists) {
+            return res.status(400).send('Account with this username already exists, try another');
         }
 
         try {
             await userRepository.save(user);
         } catch (error) {
-            res.status(409).send('User ukve arsebobs, exists and etc...')
-            return;
+            return res.status(403).send('Ops.. Occurred an error. Please try later.')
         }
-        res.status(201).json(user);
+
+        return res.status(201).json(user);
     }
 
-    static updateUser = async (req: any, res: any) => {
+    static updateUser = async (req: Request, res: any) => {
         const {firstName, lastName, userName, email} = req.body;
         const userRepository = getRepository(User);
         
@@ -138,18 +144,14 @@ class AuthController extends BaseEntity {
             let emailExists = await userRepository.findOne({email: email});
             let userNameExists = await userRepository.findOne({userName: userName});
 
-            if(userNameExists) {
-                res.status(400).send('Account with this username already exists, try another');
-                return;
-            }
-
             if(!emailRegexp.test(email) && email) {
-                return res.status(400).send('Bad request: email is not valid')
+                return res.status(400).send('Bad request: email is not valid');
             }
-            
-            if(emailExists) {
-                res.status(400).send('Email is already taken');
-                return;
+            if(emailExists && email != oldEmail) {
+                return res.status(400).send('Email is already taken');
+            }
+            if(userNameExists && userName != user?.userName) {
+                return res.status(400).send('Account with this username already exists, try another');
             }
 
             if(user) {
@@ -161,11 +163,9 @@ class AuthController extends BaseEntity {
                 }
                 await userRepository.update({email: oldEmail}, updatedValues)
                 return res.status(200).json(updatedValues)
-            } else {
-                res.status(409).send('Happened issue')
             }
         } catch (error) {
-            res.status(409).send('Happened issue')
+            return res.status(403).send('Ops.. Occurred an error. Please try later.');
         }
     }
 
@@ -178,7 +178,7 @@ class AuthController extends BaseEntity {
         }
     }
 
-    static sendMail = async (req: Request, res: Response) => {
+    static sendMail = async (req: Request, res: any) => {
         const {email} = req.body;
         let user = await getRepository(User).findOne({email: email});
         if(user) {
@@ -190,28 +190,27 @@ class AuthController extends BaseEntity {
                 .set({resetCode: code})
                 .where("email = :email", { email: email })
                 .execute();
-                res.status(200).send('Code has been send');
+                return res.status(200).send('Code has been send');
             }).catch(e => {
-                res.status(400).send('Bad request');
+                return res.status(400).send('Bad request');
             })
         } else {
-            res.status(404).send('User was not found');
+            return res.status(404).send('User was not found');
         }
     }
 
-    static checkCode = async (req: Request, res: Response, next: NextFunction) => {
+    static checkCode = async (req: Request, res: any, next: NextFunction) => {
         const {email, code} = req.body
         let user = await getRepository(User).findOne({email: email});
         let resetCode = user?.resetCode;
         if(code == resetCode) {
             next();
         } else {
-            res.status(400).send("Code's incorrect");
-            return;
+            return res.status(400).send("Code's incorrect");
         }
     }
 
-    static resetPassword = async (req: Request, res: Response) => {
+    static resetPassword = async (req: Request, res: any) => {
         const {email, newPassword, confirmPassword} = req.body;
         let user = await getRepository(User).findOne({email: email});
         if(user) {
@@ -230,7 +229,7 @@ class AuthController extends BaseEntity {
                 res.status(404).send("Insert both same passwords")
             }
         } else {
-            res.status(400).send("User doesn't exist")
+            return res.status(400).send("User doesn't exist")
         }
     }
       
@@ -256,9 +255,9 @@ class AuthController extends BaseEntity {
             }
             const t = jwt.sign(p, 'secret', {expiresIn: '30m'})
             res.cookie('session-token', t);
-            res.status(200).json({user: payload, userData: user})
+            return res.status(200).json({user: payload, userData: user})
         } catch (error) {
-            res.status(400).send('Bad request')
+            return res.status(400).send('Bad request')
         }
     }
 }
